@@ -23,7 +23,7 @@ my $dir = catdir qw(lib Text Markup);
 opendir my $dh, $dir or die "Cannot open diretory $dir: $!\n";
 my @core_parsers;
 while (my $f = readdir $dh) {
-    next if $f eq '.' || $f eq '..' || $f eq 'None.pm';
+    next if $f eq '.' || $f eq '..' || $f eq 'None.pm' || $f eq 'CommonMark.pm';
     $f =~ s{[.]pm$}{} or next;
     push @core_parsers => lc $f;
 }
