@@ -1,0 +1,16 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+<h1>CommonMark Test File</h1>
+<p>This file tests the <a href="https://commonmark.org">CommonMark</a>
+parser — which is powered by <a href="https://p3rl/CommonMark">CommonMark</a>.
+Öy.</p>
+<pre><code class="language-go">func main() {
+    fmt.Println(&quot;hello&quot;)
+}
+</code></pre>
+
+</body>
+</html>
