@@ -9,5 +9,11 @@
 parser — which is powered by <a href="https://p3rl/Text::Markdown">Text::Markdown</a>.
 Öy.</p>
 
+<p><code>go
+func main() {
+    fmt.Println("hello")
+}
+</code></p>
+
 </body>
 </html>
