@@ -9,22 +9,24 @@ add_stopwords(<DATA>);
 all_pod_files_spelling_ok();
 
 __DATA__
-FooBar
-Trac
-lowercased
-UTF
-BOM
-wiki
-MediaWiki
-Markdown
-MultiMarkdown
-UI
-GitHub
-Daniele
-Varrazzo
-reST
-reStructuredText
-docutils
 Asciidoc
 BBcode
+BOM
+CommonMark
+Daniele
+docutils
+FooBar
+GitHub
 Kanashiro
+lowercased
+Markdown
+MediaWiki
+MultiMarkdown
+reST
+reStructuredText
+sourcepos
+Trac
+UI
+UTF
+Varrazzo
+wiki
